--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -6,9 +6,9 @@
     tools:context=".MechanicFragment"
     android:background="@color/colorPrimary">
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Mechanic" />
+        android:id="@+id/lv"/>
 
 </FrameLayout>
