--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,12 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="circleButton" parent="viewParent">
+        <item name="android:background">@drawable/circle_button_blue</item>
+        <item name="android:textColor">@color/whiteTextColor</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="navigationTextActive">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
