--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".password_rest"
+    tools:context=".PasswordResetActivity"
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
