--- a/app/src/main/res/layout/activity_edit_location.xml
+++ b/app/src/main/res/layout/activity_edit_location.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    tools:context=".editLocation">
+    tools:context=".EditLocationActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
