--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -6,9 +6,9 @@
     tools:context=".PartsFragment"
     android:background="@color/colorPrimary">
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Parts" />
+        android:id="@+id/lv" />
 
 </FrameLayout>
