--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,6 +76,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="navigationTextInActive">
@@ -83,6 +84,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">10sp</item>
     </style>
 
 </resources>
