--- a/app/src/main/res/layout/row_parts.xml
+++ b/app/src/main/res/layout/row_parts.xml
@@ -24,7 +24,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/txtPartName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
