--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,9 @@
         <item name="android:textColor">@color/whiteTextColor</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="FloatingActionButton" parent="parent">
+        <item name="android:background">@drawable/floating_bt_bg</item>
+    </style>
 
     <style name="circleButton" parent="viewParent">
         <item name="android:background">@drawable/circle_button_blue</item>
