--- a/app/src/main/res/layout/row_parts.xml
+++ b/app/src/main/res/layout/row_parts.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="@dimen/loginViewsMargin"
-    android:orientation="horizontal">
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:orientation="horizontal">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/partImageView"
         android:layout_width="100dp"
@@ -116,5 +125,5 @@
             android:textColor="@color/colorPrimaryDark" />
 
     </LinearLayout>
-
 </LinearLayout>
+    </androidx.cardview.widget.CardView>
