--- a/app/src/main/res/layout/row_scrapyard.xml
+++ b/app/src/main/res/layout/row_scrapyard.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="@dimen/loginViewsMargin"
-    android:orientation="horizontal">
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/scrapYardImageView"
@@ -14,20 +22,20 @@
         android:layout_marginLeft="5dp"
         android:scaleType="centerCrop"
         android:src="@drawable/profile_def_icon"
-        app:shapeAppearance="@style/circle" />
+        app:shapeAppearance="@style/circle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/loginViewsMargin"
-        android:orientation="vertical">
 
         <TextView
+            android:layout_margin="20dp"
             android:id="@+id/txtScrapYardName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
 <!--        <TextView-->
 <!--            android:id="@+id/txtLocation"-->
@@ -43,43 +51,46 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/loginViewsMargin"
             android:text="Specialization"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
+            app:layout_constraintTop_toBottomOf="@id/txtScrapYardName" />
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/callScrapYardButton"
                 style="@style/circleButton"
                 android:layout_width="49dp"
-                android:drawableStart="@drawable/ic_call" />
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="70dp"
+                android:drawableStart="@drawable/ic_call"
+                app:layout_constraintStart_toEndOf="@id/txtScrapYardName"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/locationMechanicButton"
                 style="@style/circleButton"
                 android:layout_width="49dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="@dimen/loginViewsMargin"
-                android:drawableStart="@drawable/location_icon" />
+                android:drawableStart="@drawable/location_icon"
+                app:layout_constraintStart_toEndOf="@id/callScrapYardButton"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/rateScrapYardButton"
             style="@style/circleButton"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="33dp"
             android:drawableLeft="@drawable/star_rate_icon"
-            android:text="5/5" />
+            android:text="5/5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/locationMechanicButton"/>
 
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+</>
