--- a/app/src/main/res/layout/row_scrapyard.xml
+++ b/app/src/main/res/layout/row_scrapyard.xml
@@ -93,4 +93,4 @@
             app:layout_constraintTop_toBottomOf="@id/locationMechanicButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</>
+</androidx.cardview.widget.CardView>
