--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:paddingLeft="25dp"
+        android:paddingLeft="31dp"
         android:paddingTop="24dp"
         android:text="\t\tSetting"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
-        android:src="@drawable/back_arrow"
+        android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/setting_title"
         app:layout_constraintStart_toStartOf="@id/setting_title"
         app:layout_constraintTop_toTopOf="@id/setting_title"
