--- a/app/src/main/res/layout/row_scrapyard.xml
+++ b/app/src/main/res/layout/row_scrapyard.xml
@@ -4,98 +4,100 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:background="@color/login_bk_color"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/scrapYardImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/profile_def_icon"
-        app:shapeAppearance="@style/circle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
 
-
-    <TextView
-        android:id="@+id/txtScrapYardName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Name"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintEnd_toStartOf="@+id/callScrapYardButton"
-        app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-<!--        <TextView-->
-<!--            android:id="@+id/txtLocation"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
-<!--            android:text="Location"-->
-<!--            android:textColor="@color/colorPrimaryDark" />-->
-
-    <TextView
-        android:id="@+id/txtScrapYardSpecialization"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Specialization"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/rateScrapYardButton"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
-        app:layout_constraintTop_toBottomOf="@id/txtScrapYardName" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/scrapYardImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_def_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/circle" />
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/callScrapYardButton"
-        style="@style/circleButton"
-        android:layout_width="49dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:drawableStart="@drawable/ic_call"
-        app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/txtScrapYardName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Name"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toStartOf="@+id/callScrapYardButton"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/locationMechanicButton"
-        style="@style/circleButton"
-        android:layout_width="49dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="10dp"
-        android:drawableStart="@drawable/location_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="callScrapYardButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/txtLocation"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="@dimen/loginViewsMargin"-->
+        <!--            android:text="Location"-->
+        <!--            android:textColor="@color/colorPrimaryDark" />-->
+
+        <TextView
+            android:id="@+id/txtScrapYardSpecialization"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Specialization"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rateScrapYardButton"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toEndOf="@id/scrapYardImageView"
+            app:layout_constraintTop_toBottomOf="@id/txtScrapYardName" />
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/rateScrapYardButton"
-        style="@style/circleButton"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="10dp"
-        android:drawableLeft="@drawable/star_rate_icon"
-        android:text="5/5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/callScrapYardButton"
+            style="@style/circleButton"
+            android:layout_width="49dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/ic_call"
+            app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/locationMechanicButton"
+            style="@style/circleButton"
+            android:layout_width="49dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:drawableStart="@drawable/location_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="callScrapYardButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/rateScrapYardButton"
+            style="@style/circleButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="42dp"
+            android:layout_marginBottom="10dp"
+            android:drawableLeft="@drawable/star_rate_icon"
+            android:text="5/5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
