--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -1,33 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="@dimen/loginViewsMargin"
-    android:orientation="horizontal">
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:background="@color/login_bk_color"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/mechanicImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="5dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/profile_def_icon"
-        app:shapeAppearance="@style/circle" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/loginViewsMargin"
-        android:orientation="vertical">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/mechanicImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_def_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/circle" />
+
 
         <TextView
             android:id="@+id/txtMechanicName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:text="Name"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toStartOf="@+id/callMechanicButton"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!--        <TextView-->
         <!--            android:id="@+id/txtLocation"-->
@@ -41,45 +54,50 @@
             android:id="@+id/txtMechanicSpecialization"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/loginViewsMargin"
+            android:layout_margin="20dp"
             android:text="Specialization"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rateMechanicButton"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
+            app:layout_constraintTop_toBottomOf="@id/txtMechanicName" />
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/callMechanicButton"
+            style="@style/circleButton"
+            android:layout_width="49dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/ic_call"
+            app:layout_constraintEnd_toStartOf="@+id/locationMechanicButton"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/locationMechanicButton"
+            style="@style/circleButton"
+            android:layout_width="49dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:drawableStart="@drawable/location_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="callScrapYardButton"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/callMechanicButton"
-                style="@style/circleButton"
-                android:layout_width="49dp"
-                android:drawableStart="@drawable/ic_call" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/locationMechanicButton"
-                style="@style/circleButton"
-                android:layout_width="49dp"
-                android:layout_marginLeft="@dimen/loginViewsMargin"
-                android:drawableStart="@drawable/location_icon" />
-
-        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/rateMechanicButton"
             style="@style/circleButton"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="42dp"
+            android:layout_marginBottom="10dp"
             android:drawableLeft="@drawable/star_rate_icon"
-            android:text="5/5" />
+            android:text="5/5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/locationMechanicButton" />
 
-    </LinearLayout>
-
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
