did ManagePartsActivity and SubcategorieAdapter and SettingActivity and converted the row_scrapyard xml into constraint

--- a/app/src/main/res/layout/activity_parts_categories.xml
+++ b/app/src/main/res/layout/activity_parts_categories.xml
@@ -14,7 +14,7 @@
         android:text="\t\tParts Categories"
         android:textStyle="bold"
         android:textSize="35sp"
-        android:paddingLeft="25dp"
+        android:paddingLeft="31dp"
         android:paddingTop="24dp"
         android:textColor="@color/colorPrimaryDark"
         android:background="@color/colorAccent"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
-        android:src="@drawable/back_arrow"
+        android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/parts_title"
         app:layout_constraintStart_toStartOf="@id/parts_title"
         app:layout_constraintTop_toTopOf="@id/parts_title"
