--- a/app/src/main/res/layout/activity_manage_parts.xml
+++ b/app/src/main/res/layout/activity_manage_parts.xml
@@ -13,7 +13,7 @@
     android:text="\t\tParts"
     android:textStyle="bold"
     android:textSize="35sp"
-    android:paddingLeft="20dp"
+    android:paddingLeft="31dp"
     android:paddingTop="24dp"
     android:textColor="@color/colorPrimaryDark"
     android:background="@color/colorAccent"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
-        android:src="@drawable/back_arrow"
+        android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/categorie"
         app:layout_constraintStart_toStartOf="@id/categorie"
         app:layout_constraintTop_toTopOf="@id/categorie"
