--- a/app/src/main/res/layout/row_parts_categories.xml
+++ b/app/src/main/res/layout/row_parts_categories.xml
@@ -6,12 +6,12 @@
     android:background="#76ABAE">
 
     <TextView
-        android:id="@+id/categorie_name"
+        android:id="@+id/categories_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="categorie name"
+        android:text="categories name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
