--- a/app/src/main/res/layout/row_mechanic.xml
+++ b/app/src/main/res/layout/row_mechanic.xml
@@ -29,7 +29,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearance="@style/circle" />
 
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@+id/callMechanicButton"
+            app:layout_constraintHorizontal_bias="0.3"
+            app:layout_constraintStart_toEndOf="@id/mechanicImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical">
         <TextView
             android:id="@+id/txtMechanicName"
             android:layout_width="wrap_content"
@@ -62,7 +69,7 @@
             app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintStart_toEndOf="@id/mechanicImageView"
             app:layout_constraintTop_toBottomOf="@id/txtMechanicName" />
-
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/callMechanicButton"
