--- a/app/src/main/res/layout/row_manage_parts.xml
+++ b/app/src/main/res/layout/row_manage_parts.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="@dimen/loginViewsMargin"
-    android:orientation="horizontal">
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
+    android:background="@color/login_bk_color"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/partsManageImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="@dimen/loginViewsMargin"
+        android:layout_marginStart="@dimen/loginViewsMargin"
         android:scaleType="centerCrop"
         android:src="@drawable/gear_def_icon"
         app:shapeAppearance="@style/circle" />
@@ -126,3 +135,4 @@
         android:id="@+id/icon_delete"/>
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
